# e-commerce

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/common/: models.py  urls.py
apps/common/dataclass/: response_dataclass.py
apps/common/documentation/: documentation.py
apps/common/functions/: api_allowed_method.py  barcode_methods.py  custom_id.py  response_links.py  valid_query_params.py
apps/common/functions/validator/: field_validator.py  image_validator.py  name_validator.py  numaric_validator.py
apps/common/middleware/: url_validation_middleware.py
apps/common/mixinclass/: serializer_mixin.py
apps/common/pagination/: pagination.py
apps/medicines/admin/: __init__.py  generic_name_admin.py  medicine_info_admin.py
apps/medicines/migrations/: 0001_initial.py  0002_medicineinfo.py
apps/medicines/models/: __init__.py  generic_name_model.py  medicine_info_model.py
apps/products/admin/: __init__.py  brand_admin.py  category_admin.py  image_gallery_admin.py  manufacturer_admin.py  product_admin.py  product_seo_admin.py  sub_category_admin.py  unit_admin.py  variation_admin.py  variation_attribute_admin.py  vat_admin.py
apps/products/apis/: brand_api.py  category_api.py  manufacturer_product_category_api.py  sub_category_api.py
apps/products/dataclasses/: brand_dataclass.py
apps/products/documentations/: brand_documentation.py
apps/products/filters/: brand_filter.py  category_filter.py  manufacturer_filter.py  sub_category_filter.py
apps/products/function/: url_slug_method.py
apps/products/migrations/: 0001_initial.py  0002_alter_unitattribute_options_and_more.py  0002_subcategory.py  0003_brand.py  0004_manufacturerproductcategory_manufacturer.py  0005_vat.py  0006_product.py  0007_productimagegallery.py  0008_productseo.py  0009_variationattribute_variationattributevalue.py  0010_productvariation.py  0011_brand_web_url.py
apps/products/models/: __init__.py  brand_model.py  category_model.py  image_gallery_model.py  manufacturer_model.py  product_model.py  product_seo_model.py  sub_category_model.py  unit_model.py  variation_attribute_model.py  variation_model.py  vat_model.py
apps/products/serializers/: brand_serializer.py  category_serializer.py  manufacturer_serializer.py  sub_category_serializer.py
apps/products/urls/: brand_url.py  category_url.py  manufacturer_url.py  sub_category_url.py
apps/user/: models.py
apps/user/migrations/: 0001_initial.py
backend/: backend.py
config/: env.py
config/django/: __init__.py  auth.py  cache.py  channel.py  database.py  general.py  installed_apps.py  location.py  middlware.py  rest_framework.py  schema.py  security.py  session.py  static.py  template.py
config/server/: asgi.py  wsgi.py
docs/E-Commerce/Brand/: Create.bru  Delete.bru  Details.bru  List.bru  Update.bru
docs/E-Commerce/Category/: Create.bru  Delete.bru  Details.bru  List.bru  Update.bru
docs/E-Commerce/Manufacturer/Product Category/: Create.bru  Delete.bru  Details.bru  List.bru  Update.bru
docs/E-Commerce/Sub Category/: Create.bru  Details.bru  List.bru  Update.bru
readme/: GITHOOKS.md  POEPOET.md  POETRY.md
routes/: urls.py
